--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,9 @@ features = ["macros", "net", "rt-multi-thread", "sync", "time"]
 lazy_static = "1.4.0"
 pretty_assertions = "1.4.0"
 
+[profile.dev]
+debug = "line-tables-only"
+
 [profile.release-lto]
 inherits = "release"
 incremental = false
